crates/lowerer/tests/snapshots/upstream_parser_policy__no_comments_policy4_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..100
├─Policy 0..37
│ ├─PermitKeyword "permit" 0..6
│ ├─Whitespace " " 6..7
│ ├─Scope 7..37
│ │ ├─OpenParenthesis "(" 7..8
│ │ ├─VariableDefinition 8..17
│ │ │ └─PrincipalKeyword "principal" 8..17
│ │ ├─Comma "," 17..18
│ │ ├─Whitespace " " 18..19
│ │ ├─VariableDefinition 19..25
│ │ │ └─ActionKeyword "action" 19..25
│ │ ├─Comma "," 25..26
│ │ ├─Whitespace " " 26..27
│ │ ├─VariableDefinition 27..35
│ │ │ └─ResourceKeyword "resource" 27..35
│ │ ├─Comma "," 35..36
│ │ ├─Whitespace " " 36..37
│ │ └─CloseParenthesis "" 37..37
│ └─Semicolon "" 37..37
└─Policy 37..100
  ├─Error 37..100
  │ ├─ContextKeyword "context" 37..44
  │ ├─CloseParenthesis ")" 44..45
  │ ├─Newline "\n" 45..46
  │ ├─WhenKeyword "when" 46..50
  │ ├─Whitespace " " 50..51
  │ ├─OpenBrace "{" 51..52
  │ ├─Newline "\n" 52..53
  │ ├─Whitespace "    " 53..57
  │ ├─ContextKeyword "context" 57..64
  │ ├─Dot "." 64..65
  │ ├─Identifier "contains" 65..73
  │ ├─OpenParenthesis "(" 73..74
  │ ├─Integer "3" 74..75
  │ ├─Comma "," 75..76
  │ ├─Whitespace " " 76..77
  │ ├─String "\"four\"" 77..83
  │ ├─Comma "," 83..84
  │ ├─Whitespace " " 84..85
  │ ├─Identifier "five" 85..89
  │ ├─OpenParenthesis "(" 89..90
  │ ├─Integer "6" 90..91
  │ ├─Comma "," 91..92
  │ ├─Whitespace " " 92..93
  │ ├─Integer "7" 93..94
  │ ├─CloseParenthesis ")" 94..95
  │ ├─CloseParenthesis ")" 95..96
  │ ├─Newline "\n" 96..97
  │ ├─CloseBrace "}" 97..98
  │ ├─Semicolon ";" 98..99
  │ └─Newline "\n" 99..100
  └─Semicolon "" 100..100
