crates/lowerer/tests/snapshots/upstream_parser_policy__policies6.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ test:1:1
  │
1 │ ┏ 3(principal: p, action: a, resource: r)
2 │ ┃ when { w }
3 │ ┃ unless { u }
4 │ ┃ advice { "doit" };
5 │ ┃
6 │ ┃ permit (principal: p, action: a, resource: r)
  ╰╴┗━┛ unexpected token
error: unknown variable `w `
  ╭▸ test:7:8
  │
7 │ when { w }
  │        ━━ not a valid variable
  ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
error: unknown variable `u `
  ╭▸ test:8:10
  │
8 │ unless { u }
  │          ━━ not a valid variable
  ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
error: unexpected token
   ╭▸ test:9:1
   │
 9 │ ┏ advice { "doit" };
10 │ ┃
11 │ ┃ permit (principal: p, action: a, resource: r)
   ╰╴┗━┛ unexpected token
error: unknown variable `w `
   ╭▸ test:12:8
   │
12 │ when { w }
   │        ━━ not a valid variable
   ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
error: unknown variable `u `
   ╭▸ test:13:10
   │
13 │ unless { u }
   │          ━━ not a valid variable
   ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
error: missing policy effect
   ╭▸ test:14:1
   │
14 │ advice { "doit" };
   ╰╴━━━━━━━━━━━━━━━━━━ expected `permit` or `forbid`
